--- a/css/styles.css
+++ b/css/styles.css
@@ -14,18 +14,18 @@ ul {
 
 /*-----------HEADER-------------*/
 
-.logo-first-part {
-    color: #4D5AE5;
-}
-
-.logo{
-    color:  #2E2F42;
+.logo {
+    color: var(--IRIS, #4D5AE5);
 font-family: Raleway;
 font-size: 18px;
 font-weight: 700;
-line-height: 1.17;
+line-height: 1.7;
 letter-spacing: 0.03em;
 text-transform: uppercase;
+}
+
+.loga-second-part {
+    color:  #2E2F42;
 }
 
 .header-menu-link {
@@ -40,16 +40,19 @@ letter-spacing: 0.02em;
     color: var(--OCEAN, #404BBF);
 }
 
-.header-menu-link:focus {
-    border-radius: 2px;
-    background: var(--OCEAN, #404BBF);
+.link-studio:focus {
+    color: var(--OCEAN, #404BBF);
+}
+
+.address {
+    font-style: normal
 }
 
 .address-item-link {
 color:#434455;
 font-size: 16px;
 font-weight: 400;
-line-height: 1.5; /* 150% */
+line-height: 1.5;
 letter-spacing: 0.02em;
 }
 .address-item-link:hover {
@@ -86,8 +89,13 @@ letter-spacing: 0.02em;
 background: var(--IRIS, #4D5AE5);
 box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
- .hero-btn:hover {
+
+.hero-btn:hover {
 background: #404BBF;
+ }
+
+.hero-btn:focus {
+    background-color: #404BBF;
  }
 
 /*-------------------------------*/
@@ -111,7 +119,7 @@ background: #404BBF;
 font-size: 20px;
 font-weight: 500;
 line-height: 1.2;
-letter-spacing: 0.2em;
+letter-spacing: 0.02em;
 }
 
 .feature-item-text {
@@ -143,6 +151,7 @@ text-transform: capitalize;
 .team-list {
 }
 .team-list-item {
+    background-color: #FFFFFF
 }
 .team-img {
 }
