--- a/css/styles.css
+++ b/css/styles.css
@@ -16,16 +16,16 @@ ul {
 
 .logo {
     color: var(--IRIS, #4D5AE5);
-font-family: Raleway;
+    font-family: "Raleway", sans-serif;
 font-size: 18px;
 font-weight: 700;
-line-height: 1.7;
+line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 }
 
 .loga-second-part {
-    color:  #2E2F42;
+    color: #2E2F42fd;
 }
 
 .header-menu-link {
@@ -40,7 +40,7 @@ letter-spacing: 0.02em;
     color: var(--OCEAN, #404BBF);
 }
 
-.link-studio:focus {
+.header-menu-link:focus {
     color: var(--OCEAN, #404BBF);
 }
 
@@ -85,9 +85,7 @@ letter-spacing: 0.02em;
     line-height: 1.5;
     letter-spacing: 0.04em;
     cursor: pointer;
-    border-radius: 4px;
-background: var(--IRIS, #4D5AE5);
-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    background: var(--IRIS, #4D5AE5);
 }
 
 .hero-btn:hover {
