--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ letter-spacing: 0.03em;
 text-transform: uppercase;
 }
 
-.loga-second-part {
+.logo-header {
     color: #2E2F42fd;
 }
 
@@ -100,17 +100,6 @@ background: #404BBF;
 
 /*-----------FEATURES-------------*/
 
-.visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    white-space: nowrap;
-    clip-path: inset(100%);
-    overflow: hidden;
-  }
 
 .features-item-title {
     color: var(--NAVY-BLUE, #2E2F42);
@@ -220,6 +209,11 @@ letter-spacing: 0.02em;
 .footer {
     background: var(--NAVY-BLUE, #2E2F42);
 }
+
+.logo-footer {
+    color: var(--CLOUD, #F4F4FD);
+}
+
 .footer-text {
     color: var(--CLOUD, #F4F4FD);
 font-size: 16px;
